--- a/nuget.nuspec
+++ b/nuget.nuspec
@@ -13,7 +13,7 @@
             <dependency id="jquery" version="1.7.0"/>
             <dependency id="datatables.net" version="1.10.15"/>
             <dependency id="datatables.net-searchpanes" version="1.1.1"/>
-            <dependency id="bootstrap4" version="4.*"/>
+            <dependency id="bootstrap" version="4.*"/>
         </dependencies>
     </metadata>
     <files>
