--- a/package.json
+++ b/package.json
@@ -1,33 +1,47 @@
 {
     "name": "datatables.net-searchpanes-bs4",
+    "description": "SearchPanes for DataTables with styling for [Bootstrap4](https://getbootstrap.com/docs/4.6/getting-started/introduction/)",
+    "main": "js/searchPanes.bootstrap4.js",
+    "style": "css/searchPanes.bootstrap4.css",
     "version": "1.2.2",
-    "description": "SearchPanes for DataTables with styling for [Bootstrap](http://getbootstrap.com/)",
     "files": [
         "css/**/*.css",
         "js/**/*.js"
     ],
-    "main": "js/searchPanes.bootstrap4.js",
-    "style": "css/searchPanes.bootstrap4.css",
     "keywords": [
-        "Search",
-        "Filter",
-        "DataTables",
+        "SearchPanes",
+ "search",
+ "filtering",
+        "Bootstrap",
+ "Bootstrap4",
+        "Datatables",
         "jQuery",
         "table",
-        "Bootstrap"
+        "filter",
+        "sort"
     ],
-    "homepage": "https://datatables.net",
-    "bugs": "https://datatables.net/forums",
-    "license": "MIT",
+    "dependencies": {
+        "datatables.net-searchpanes": ">=1.2.2",
+        "datatables.net-bs4": ">=1.10.24",
+        "jquery": ">=1.7"
+    },
+    "moduleType": [
+        "globals",
+        "amd",
+        "node"
+    ],
+    "ignore": [
+        "composer.json",
+        "datatables.json",
+        "package.json"
+    ],
     "author": {
         "name": "SpryMedia Ltd",
         "url": "http://datatables.net"
     },
-    "dependencies": {
-        "jquery": ">=1.7",
-        "datatables.net-bs4": "^1.10.15",
-        "datatables.net-searchpanes": "1.2.2"
-    },
+    "homepage": "https://datatables.net",
+    "bugs": "https://datatables.net/forums",
+    "license": "MIT",
     "repository": {
         "type": "git",
         "url": "https://github.com/DataTables/Dist-DataTables-SearchPanes-Bootstrap4.git"
