--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "description": "SearchPanes for DataTables with styling for [Bootstrap4](https://getbootstrap.com/docs/4.6/getting-started/introduction/)",
     "main": "js/searchPanes.bootstrap4.js",
     "style": "css/searchPanes.bootstrap4.css",
-    "version": "1.2.2",
+    "types": "./types/searchPanes.bootstrap4.d.ts",
+    "version": "1.3.0",
     "files": [
         "css/**/*.css",
         "js/**/*.js"
@@ -21,7 +22,7 @@
         "sort"
     ],
     "dependencies": {
-        "datatables.net-searchpanes": ">=1.2.2",
+        "datatables.net-searchpanes": ">=1.3.0",
         "datatables.net-bs4": ">=1.10.24",
         "jquery": ">=1.7"
     },
