--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
     "main": "js/searchPanes.bootstrap4.js",
     "style": "css/searchPanes.bootstrap4.css",
     "types": "./types/searchPanes.bootstrap4.d.ts",
-    "version": "1.2.2",
+    "version": "1.3.0",
     "files": [
         "css/**/*.css",
         "js/**/*.js"
     ],
     "keywords": [
         "SearchPanes",
-        "search",
-        "filtering",
+ "search",
+ "filtering",
         "Bootstrap",
-        "Bootstrap4",
+ "Bootstrap4",
         "Datatables",
         "jQuery",
         "table",
@@ -22,9 +22,9 @@
         "sort"
     ],
     "dependencies": {
-        "jquery": ">=1.7",
-        "datatables.net-bs4": "^1.10.15",
-        "datatables.net-searchpanes": "1.2.2"
+        "datatables.net-searchpanes": ">=1.3.0",
+        "datatables.net-bs4": ">=1.10.24",
+        "jquery": ">=1.7"
     },
     "moduleType": [
         "globals",
