--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,6 @@
     ],
     "require": {
         "datatables.net/datatables.net-searchpanes": ">=1.3.0",
-        "datatables.net/datatables.net-bs4": ">=1.10.24"
+        "datatables.net/datatables.net-bs4": ">=1.10.26-dev"
     }
 }
