Correcting BS5 Packaging error

--- a/nuget.nuspec
+++ b/nuget.nuspec
@@ -11,7 +11,7 @@
         <tags>SearchPanes  search  filtering  Bootstrap  Bootstrap4  Datatables jQuery table</tags>
         <dependencies>
             <dependency id="datatables.net-searchpanes" version=">=1.3.0"/>
-            <dependency id="datatables.net-bs4" version=">=1.10.26-dev"/>
+            <dependency id="datatables.net-bs4" version=">=1.10.25"/>
         </dependencies>
         <contentFiles>
             <files include="**/*" buildAction="Content"/>
