--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "js/searchPanes.bootstrap4.js",
     "module": "js/searchPanes.bootstrap4.mjs",
     "style": "css/searchPanes.bootstrap4.css",
-    "types": "./types/searchPanes.bootstrap4.d.ts",
+    "types": "./types/types.d.ts",
     "version": "2.0.2",
     "files": [
         "css/**/*.css",
