--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "main": "js/searchPanes.bootstrap4.js",
     "module": "js/searchPanes.bootstrap4.mjs",
     "style": "css/searchPanes.bootstrap4.css",
-    "types": "./types/types.d.ts",
+    "types": "./types/searchPanes.bootstrap4.d.ts",
     "version": "2.1.2",
     "files": [
         "css/**/*.css",
@@ -14,10 +14,10 @@
     ],
     "keywords": [
         "SearchPanes",
-        "search",
-        "filtering",
+ "search",
+ "filtering",
         "Bootstrap",
-        "Bootstrap4",
+ "Bootstrap4",
         "Datatables",
         "jQuery",
         "table",
@@ -25,8 +25,8 @@
         "sort"
     ],
     "dependencies": {
-        "datatables.net-searchpanes": ">=2.0.2",
-        "datatables.net-bs4": ">=1.12.1",
+        "datatables.net-searchpanes": ">=2.1.2",
+        "datatables.net-bs4": ">=1.13.4",
         "jquery": ">=1.7"
     },
     "moduleType": [
